# spectral_library_management_tool

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20231105_0001_initial_schema.py
data-samples/: demo_import.csv  demo_import_extended.csv
data-samples/asd/: basalt_canopy.sig  quartz_reference.sig
docs/: architecture-overview.md  changelog.md  import-mapping.md  requirements.md  roadmap.md  setup.md  ui-wireframes.md
docs/importers/: asd_ascii.md
src/spectrallibrary/: __init__.py  app.py  seed.py
src/spectrallibrary/db/: __init__.py  base.py  engine.py  models.py  session.py  settings.py
src/spectrallibrary/exporting/: __init__.py  base.py  registry.py
src/spectrallibrary/importing/: __init__.py  asd_ascii_importer.py  base.py  csv_importer.py  registry.py
src/spectrallibrary/services/: __init__.py  import_service.py  library_service.py
src/spectrallibrary/ui/: __init__.py  application.py  main_window.py
src/spectrallibrary/ui/views/: __init__.py  export_center.py  import_wizard.py  library_browser.py  plugin_hub.py  spectrum_viewer.py
src/spectrallibrary/ui/widgets/: navigation.py
tests/: conftest.py  test_asd_importer.py  test_csv_importer.py  test_db_models.py  test_import_preview_dialog.py  test_import_service.py  test_library_service.py  test_main_window_import.py  test_placeholder.py  test_seed.py  test_ui_entry.py
tests/fixtures/asd/: sample_radiance.sig  sample_reflectance.sig
